--- a/src/sublight-patrol.css
+++ b/src/sublight-patrol.css
@@ -114,6 +114,57 @@ main {
 	cursor: default;
 }
 
+.main__warnings {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	opacity: 0.6;
+	z-index: 2;
+	visibility: hidden;
+	transition: opacity 0.4s;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.main__warnings-proper {
+	padding: 0.6em 0.8em;
+	text-transform: uppercase;
+	font-weight: 700;
+	background-color: #000;
+	border: 5px solid var(--msg-color);
+	color: var(--msg-color);
+	box-shadow: 0 0 5px var(--msg-color), inset 0 0 7px var(--msg-color);
+	text-shadow: 0 0 5px var(--msg-color);
+	animation: 0.5s ease-in-out infinite alternate messagePulse;
+	animation-fill-mode: forwards;
+}
+
+@keyframes messagePulse {
+	0% {
+		transform: scale(0.95, 0.95);
+		opacity: 0.8;
+	}
+	100% {
+		transform: scale(1, 1);
+		opacity: 1;
+	}
+}
+
+/*.main__warnings-proper--message {
+	--msg-color: #32ade6;
+}*/
+
+.main__warnings-proper--warnings {
+	--msg-color: #e6b632;
+}
+
+.main__warnings-proper--alerts {
+	--msg-color: #e63232;
+}
+
 .controls {
 	padding: 0 0 0.5em 0;
 	text-align: center;
