--- a/src/sublight-patrol.css
+++ b/src/sublight-patrol.css
@@ -6,6 +6,31 @@
 	box-sizing: border-box;
 }
 
+html {
+	scrollbar-color: #484848 #6565651f;
+}
+
+.customScroll {
+	scrollbar-color: #343434 #6565651f;
+}
+
+.customScroll::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	background-color: #2a2a2a;
+}
+
+.customScroll::-webkit-scrollbar {
+	width: 12px;
+	background-color: #00000000;
+}
+
+.customScroll::-webkit-scrollbar-thumb {
+	border-radius: 4px;
+	background-color: #444;
+	background: linear-gradient(to right, #333, #3d3d3d, #333);
+	border: 1px solid #1c1c1c;
+}
+
 body,
 html {
 	margin: 0;
