--- a/src/sublight-patrol.css
+++ b/src/sublight-patrol.css
@@ -64,7 +64,7 @@ body {
 	}
 
 	.container {
-		margin: 0 0;
+		margin: 1em 0 0;
 	}
 }
 
@@ -372,6 +372,12 @@ footer {
 	justify-items: center;
 }
 
+.footer__bottom {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .footer__text {
 	font-size: 0.8em;
 	line-height: 1.7em;
@@ -403,8 +409,8 @@ footer {
 .footer__home {
 	height: 44px;
 	width: 110px;
-	margin-top: 0.15em;
-	margin-bottom: 0.15em;
+	margin-top: 0.25em;
+	margin-right: 0.45em;
 	display: flex;
 	padding: 2px 10px;
 	text-decoration: none;
@@ -413,7 +419,7 @@ footer {
 	border-radius: 10px;
 	align-items: center;
 	transition: var(--bezier) 0.1s, box-shadow 0.2s ease,
-		width 0.2s cubic-bezier(0.47, 0, 0.59, 1) 0.35s;
+		width 0.2s cubic-bezier(0.47, 0, 0.59, 1) 0.25s;
 }
 
 .footer__home:hover {
@@ -451,7 +457,7 @@ footer {
 	width: 38px;
 	color: #ffffff90;
 	margin-left: 0.9em;
-	transition: color 0.2s ease-in-out 0.7s;
+	transition: color 0.2s ease-in-out 0.5s;
 }
 
 .toggle-footer {
