keyboardLayouts.js - Keyboard-related functions are now separate and can easily be swapped out

--- a/src/page.css
+++ b/src/page.css
@@ -235,6 +235,7 @@ input[type='range']::-ms-thumb {
 	margin-bottom: 0.5em;
 	text-align: center;
 	border-bottom: 1px dotted #ffffff20;
+	color: #ffffff30;
 }
 
 .controls__control {
