Improvement: mission 1 - containers should be off screen so the player has to move a bit to get to them; mission 2 - one type 3 fighter is more than enough this early on, htran_091 hasBeenScanned should be true obviously, htran_091 mustHaveSurvived should be set to completed when mylok_1 is dead; Important cargo should be green, illicit cargo red

--- a/src/game.css
+++ b/src/game.css
@@ -324,7 +324,7 @@
 }
 
 .game__status-proper .red {
-	color: #e63232;
+	color: #ff6161;
 }
 
 .game__status-proper .yellow {
@@ -484,6 +484,18 @@
 
 .game__hud-contents-text--unknown {
 	color: #ffffff40;
+}
+
+.game__hud-contents-text--irrelevant {
+	color: #ffffff70;
+}
+
+.game__hud-contents-text--illicit {
+	color: #ff5353;
+}
+
+.game__hud-contents-text--missionObjective {
+	color: #32ade6;
 }
 
 .game__hud--visible .game__hud-id-text,
