--- a/src/game.css
+++ b/src/game.css
@@ -198,17 +198,17 @@
 	left: 0;
 	right: 0;
 	z-index: 9;
-	background-color: #000000c0;
+	/* background-color: #000000c0; */
 	opacity: 0;
 	visibility: hidden;
 }
 
 .game__pause-text {
 	text-align: center;
-	margin-top: 60px;
+	margin-top: 11px;
 	font-size: 0.8em;
 	letter-spacing: 1em;
-	transform: translateX(-0.5em);
+	padding-left: 1em;
 	color: #ffffffc0;
 	animation: none;
 }
@@ -225,7 +225,8 @@
 
 .game__pause-objectives {
 	text-align: left;
-	padding: 1em 10px;
+	padding: 56px 10px 12px;
+	height: 300px;
 	font-size: 12px;
 }
 
