--- a/src/game.css
+++ b/src/game.css
@@ -191,6 +191,48 @@
 	opacity: 0;
 }
 
+.game__main_menu {
+	position: absolute;
+	bottom: 0;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 4;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	visibility: hidden;
+}
+
+.game__main_menu--shown {
+	visibility: visible;
+}
+
+.game__main_menu_logo {
+	width: 412px;
+	height: 93px;
+	background: url('assets/logo_main_menu.png');
+	margin-top: 120px;
+	opacity: 0;
+}
+
+.game__main_menu--shown .game__main_menu_logo {
+	opacity: 1;
+	transition: opacity 1.6s ease-in-out 1s;
+}
+
+.game__main_menu_version {
+	margin-top: 59px;
+	font-size: 12px;
+	color: #ffffff30;
+	opacity: 0;
+}
+
+.game__main_menu--shown .game__main_menu_version {
+	opacity: 1;
+	transition: opacity 1.6s ease-in-out 3s;
+}
+
 .game__pause {
 	position: absolute;
 	bottom: 0;
