--- a/src/page.css
+++ b/src/page.css
@@ -187,6 +187,12 @@ input[type='range']::-ms-thumb {
 	color: #ffffff50;
 	text-transform: uppercase;
 	transform: translateX(0.5em);
+	opacity: 1;
+	transition: opacity 1s ease-in-out;
+}
+
+.header__title--hidden {
+	opacity: 0;
 }
 
 .header__volume_control {
