--- a/src/game.css
+++ b/src/game.css
@@ -33,6 +33,8 @@
 	flex-direction: column;
 	align-content: center;
 	justify-content: center;
+	font-size: 20px;
+	letter-spacing: 2px;
 }
 
 .game__loading--hidden {
@@ -55,19 +57,100 @@
 	flex-direction: column;
 	align-content: center;
 	justify-content: center;
+	position: relative;
+	font-size: 20px;
+	letter-spacing: 2px;
+}
+
+.game__loading_done svg {
+	display: block;
 }
 
 .game__loading_done--shown {
 	display: flex;
 }
 
-.game__loading_done_text_top,
-.game__loading_done_text_middle {
+.game__loading_done__ready {
 	margin-bottom: 1.5em;
 }
 
-.game__loading_done_text_bottom {
+.game__loading_done__hit-enter {
 	color: #c0c0c0;
+}
+
+.game__loading_done__callout {
+	position: absolute;
+	display: grid;
+	grid-template-columns: auto auto;
+	gap: 8px;
+	transition: all 1.2s;
+	opacity: 0;
+}
+
+.game__loading_done__callout--shown {
+	opacity: 1;
+}
+
+.game__loading_done__callout--audio {
+	left: 700px;
+	top: 20px;
+}
+
+.game__loading_done__callout--keyboard {
+	left: 185px;
+	bottom: 20px;
+}
+
+.game__loading_done__callout-proper {
+	border: 2px solid #194044;
+	border-radius: 10px;
+	padding: 10px 14px;
+	background-color: #14262a;
+	display: grid;
+	grid-template-columns: auto auto;
+	gap: 12px;
+	align-items: center;
+	width: 400px;
+	/* height: 100px; */
+}
+
+.game__loading_done__callout--audio .game__loading_done__callout-proper {
+	width: 355px;
+} 
+
+.game__loading_done__callout--keyboard .game__loading_done__callout-proper {
+	width: 390px;
+} 
+
+.game__loading_done__callout-text {
+	color: #ffffffc0;
+	text-align: left;
+	font-weight: bold;
+	font-size: 13px;
+	line-height: 20px;
+	letter-spacing: normal;
+}
+
+.game__loading_done__callout-icon svg {
+	fill: #ffffffe0;
+}
+
+.game__loading_done__callout-arrow {
+	width: 40px;
+	height: 40px;
+}
+
+.game__loading_done__callout-arrow svg {
+	fill: #194044;
+	transform: rotate(90deg);
+}
+
+.game__loading_done__callout--audio .game__loading_done__callout-arrow {
+	transform: translateY(4px);
+}
+
+.game__loading_done__callout--keyboard .game__loading_done__callout-arrow {
+	transform: translateY(23px);
 }
 
 .game__dialog {
