--- a/src/game.css
+++ b/src/game.css
@@ -82,7 +82,7 @@
 	position: absolute;
 	display: grid;
 	grid-template-columns: auto auto;
-	gap: 8px;
+	gap: 4px;
 	transition: all 1.2s;
 	opacity: 0;
 }
@@ -92,7 +92,7 @@
 }
 
 .game__loading_done__callout--audio {
-	left: 700px;
+	left: 680px;
 	top: 20px;
 }
 
@@ -119,7 +119,7 @@
 } 
 
 .game__loading_done__callout--keyboard .game__loading_done__callout-proper {
-	width: 390px;
+	width: 385px;
 } 
 
 .game__loading_done__callout-text {
@@ -142,7 +142,18 @@
 
 .game__loading_done__callout-arrow svg {
 	fill: #194044;
-	transform: rotate(90deg);
+	animation: 0.6s ease-in-out infinite alternate doJiggleCalloutArrow;
+	animation-fill-mode: forwards;
+	/* transform: rotate(90deg); */
+}
+
+@keyframes doJiggleCalloutArrow {
+	0% {
+		transform: translateX(2px) rotate(90deg);
+	}
+	100% {
+		transform: translateX(-2px) rotate(90deg);
+	}
 }
 
 .game__loading_done__callout--audio .game__loading_done__callout-arrow {
